# laundry-monitor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  errors.txt  setup_environment.sh
.cargo/: config.toml
.claude/commands/: new-sensor-project.md
docker/: Dockerfile  server.yml
src/: appliance.rs  lib.rs  notify.rs  utils.rs  wifi_adapter.rs
